Cleanups, add README for webapp